--- a/src/pages/mes-personnages/mes-personnages.html
+++ b/src/pages/mes-personnages/mes-personnages.html
@@ -23,7 +23,7 @@
       <ion-segment-button value="crafting">
         Métiers
       </ion-segment-button>
-      <ion-segment-button value="equipment">
+      <ion-segment-button value="equipment" (click)="getStuff()">
         Stuff
       </ion-segment-button>
       <ion-segment-button value="inventory" (click)="getInventory()">
@@ -123,6 +123,108 @@
 
   </ion-card>
 </ion-list>
+
+<div *ngSwitchCase = "'equipment'">
+  <ion-grid>
+    <ion-row wrap>
+      <ion-col col-6>
+        <ion-item>
+           <h2>{{CharacterEquipment[5].slot}}</h2>
+        </ion-item>
+      </ion-col>
+      <ion-col col-6>
+        <ion-item>
+           <h2>{{CharacterEquipment[1].slot}}</h2>
+        </ion-item>
+      </ion-col>
+    </ion-row>
+    <ion-row wrap>
+      <ion-col col-6>
+        <ion-item>
+           <h2>{{CharacterEquipment[7].slot}}</h2>
+        </ion-item>
+      </ion-col>
+      <ion-col col-6>
+        <ion-item>
+            <h2>{{CharacterEquipment[8].slot}}</h2>
+        </ion-item>
+      </ion-col>
+    </ion-row>
+    <ion-row wrap>
+      <ion-col col-6>
+        <ion-item>
+           <h2>{{CharacterEquipment[2].slot}}</h2>
+        </ion-item>
+      </ion-col>
+      <ion-col col-6>
+        <ion-item>
+           <h2>{{CharacterEquipment[9].slot}}</h2>
+        </ion-item>
+      </ion-col>
+    </ion-row>
+    <ion-row wrap>
+      <ion-col col-6>
+        <ion-item>
+           <h2>{{CharacterEquipment[4].slot}}</h2>
+        </ion-item>
+      </ion-col>
+      <ion-col col-6>
+        <ion-item>
+           <h2>{{CharacterEquipment[12].slot}}</h2>
+        </ion-item>
+      </ion-col>
+    </ion-row>
+
+    <ion-row wrap>
+      <ion-col col-6>
+        <ion-item>
+           <h2>{{CharacterEquipment[6].slot}}</h2>
+        </ion-item>
+      </ion-col>
+      <ion-col col-6>
+        <ion-item>
+           <h2>{{CharacterEquipment[10].slot}}</h2>
+        </ion-item>
+      </ion-col>
+    </ion-row>
+    <ion-row wrap>
+      <ion-col col-6>
+        <ion-item>
+           <h2>{{CharacterEquipment[3].slot}}</h2>
+        </ion-item>
+      </ion-col>
+      <ion-col col-6>
+        <ion-item>
+            <h2>{{CharacterEquipment[11].slot}}</h2>
+        </ion-item>
+      </ion-col>
+    </ion-row>
+    <ion-row wrap>
+      <ion-col col-6>
+        <ion-item>
+           <h2>{{CharacterEquipment[2].slot}}</h2>
+        </ion-item>
+      </ion-col>
+      <ion-col col-6>
+        <ion-item>
+           <h2>{{CharacterEquipment[9].slot}}</h2>
+        </ion-item>
+      </ion-col>
+    </ion-row>
+    <ion-row wrap>
+      <ion-col col-6>
+        <ion-item>
+           <h2>{{CharacterEquipment[4].slot}}</h2>
+        </ion-item>
+      </ion-col>
+      <ion-col col-6>
+        <ion-item>
+           <h2>{{CharacterEquipment[10].slot}}</h2>
+        </ion-item>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+</div>
 
 <div *ngSwitchCase="'inventory'">
 
